--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev": "vite serve --mode dev",
+    "build": "vite build --mode prod",
     "preview": "vite preview",
     "serve": "vite build && vite preview"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
   },
